--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
-# This folder shows up if you use VS Code. By adding this line, 
+# Sometimes a .vscode folder shows up if you use VS Code. By adding this line, 
 # we prevent it from being synced with the GitHub
 .vscode
