--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@
 # For PCBs designed using KiCad: http://www.kicad-pcb.org/
 # Format documentation: http://kicad-pcb.org/help/file-formats/
 
+PCB-Backups/
+
 # Temporary files
 *.000
 *.bak
